--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
+	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Worklist</title>
 
-	<script id="sap-ui-bootstrap"
-			src="resources/sap-ui-core.js"
-			data-sap-ui-libs="sap.m, sap.f"
-			data-sap-ui-theme="sap_belize"
-			data-sap-ui-compatVersion="edge"
-			data-sap-ui-preload="async"
-			data-sap-ui-resourceroots='{"zjblessons.Worklist": "."}'
-			data-sap-ui-frameOptions="trusted">
-	</script>
+	<script id="sap-ui-bootstrap" src="https://openui5.hana.ondemand.com/1.120.11/resources/sap-ui-core.js"
+		data-sap-ui-libs="sap.m, sap.f" data-sap-ui-theme="sap_belize_dark" data-sap-ui-compatVersion="edge"
+		data-sap-ui-preload="async" data-sap-ui-resourceroots='{"zjblessons.Worklist": "."}'
+		data-sap-ui-frameOptions="trusted">
+		</script>
 
 	<script>
 		sap.ui.getCore().attachInit(function () {
@@ -40,4 +37,5 @@
 
 <body class="sapUiBody" id="content">
 </body>
+
 </html>
